--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
     </properties>
 
 <dependencies>
+    <!-- https://mvnrepository.com/artifact/jboss/jboss-annotations-ejb3 -->
+    <dependency>
+        <groupId>jboss</groupId>
+        <artifactId>jboss-annotations-ejb3</artifactId>
+        <version>4.2.2.GA</version>
+        <scope>provided</scope>
+    </dependency>
 
     <dependency>
         <groupId>jakarta.platform</groupId>
